<resources>
    <string name="app_name">Day Planner</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_name">Task Name(Text)</string>
    <string name="time_to_complete_the_work">Time to complete the work(hrs)</string>
    <string name="efforts_to_complete_work">Efforts to complete work(1-10)</string>
    <string name="impact">Impact(1-10)</string>
    <string name="urgency">Urgency(1-10)</string>
    <string name="probability_of_success">Probability of Success(0-1)</string>
    <string name="work_sequence">Level of Work(1-10)</string>
    <string name="add_task">Add Task</string>
    <string name="team_name">Enter Team</string>
    <string name="name">Enter Team Name</string>
    <string name="number_of_days_left_to_complete">Number of days left to complete(days)</string>
    <string name="last_date_to_completed">Last date to completed</string>
    <string name="importance">Importance(1-10)</string>
    <string name="d">D(0-1)</string>
    <string name="task_description">Task Description(Text)</string>
    <string name="level_of_work_number">Level of Work(Number)</string>
    <string name="dependent_task">Task I\'m Dependent on</string>
    <string name="task_dependent_on">Task Dependent on me</string>
    <string name="_1">1</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>
