<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.npluslabs.dayplanner.Fragments.AddTaskFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="10sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="Team name"
            android:id="@+id/team_name"/>

        <!-- TODO: Update blank fragment layout -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                android:layout_height="wrap_content"
                android:hint="@string/task_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_task_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/task_desc"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:hint="@string/task_description" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_time_to_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/time_to_complete"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:hint="@string/time_to_complete_the_work" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_urgency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/urgency"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:hint="@string/urgency" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/probability_input_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/success"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"
                android:hint="@string/probability_of_success" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_work_sequence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/work_sequence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/d" />

        </android.support.design.widget.TextInputLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_importance"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/importance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/importance" />

            </android.support.design.widget.TextInputLayout>
            <ImageView
                android:layout_marginTop="20sp"
                android:layout_width="0dp"
                android:id="@+id/importance_of_work_info"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info_black_24dp"/>
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_work_level"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <EditText
                android:id="@+id/work_level"
                android:text="@string/_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/level_of_work_number" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_margin="15sp"
            android:text="@string/dependent_task"
            android:id="@+id/dependent_tasklist"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:id="@+id/add_task"
            android:text="@string/add_task"/>
    </LinearLayout>
</ScrollView>